# nonebot-plugin-puppet

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
nonebot_plugin_puppet/: __init__.py  data.py  handle.py  mapping.py  parser.py  request.py
nonebot_plugin_transfer/: __init__.py  data.py  handle.py  parser.py
