[tool.poetry]
name = "nonebot_plugin_puppet"
version = "0.2.2"
description = "Make NoneBot your puppet"
authors = ["Jigsaw <j1g5aw@foxmail.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/Jigsaw111/nonebot_plugin_puppet"
repository = "https://github.com/Jigsaw111/nonebot_plugin_puppet"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
